# dow

./: ChangeLog  Makefile.am  README.md  bootstrap.sh  configure.ac  dow.1.in  dow.spec.in
src/: Makefile.am  dow.c  version.h.in
